Fix navbar collapse: change flex-wrap nowrap to wrap

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -22,7 +22,7 @@
 }
 
 .navbar > .container {
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 }
 
 .navbar-brand {
